# rk4-lmbf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
python/: 2026_ieee_aerospace.py  lmb_engine_loader.py  run.py  run_once.py
scripts/: build.ps1  build.sh  ci-test.ps1  ci-test.sh  cmake-venv-args.ps1  cmake-venv-args.sh
src/: adaptive_birth_model.cpp  adaptive_birth_model.h  datatypes.h  in_orbit_sensor_model.cpp  in_orbit_sensor_model.h  main.cpp  matrix.cpp  metrics.cpp  models.h  smc_lmb_tracker.cpp  smc_lmb_tracker.h  two_body_propagator.cpp  two_body_propagator.h  validation.h
tests/: assignments.py  test_two_body_propagator_multistep.py
