[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmb_engine"
version = "0.0.1"
description = "A high-performance C++ engine for SMC-LMB space debris tracking."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools]
# This tells setuptools to include non-Python files found in the package,
# which is CRITICAL for including our compiled .pyd module.
include-package-data = true